Fixing the icon alignment issues

--- a/src/components/styles.module.css
+++ b/src/components/styles.module.css
@@ -51,9 +51,7 @@
 .left-icons {
   display: flex;
   width: 240px;
-  font-size: 19px;
-  justify-content: space-around;
-}
+  }
 
 .progress-bar {
   padding: 1px;
@@ -69,7 +67,7 @@
 }
 
 .icon-bar{
-    padding: 5px;
+    height: 48px;
     display: flex;
 }
 
@@ -77,6 +75,8 @@
 {
     font-size: 14px;
     padding: 3px;
+    display: flex;
+    align-items: center;
 }
 
 .currentTime{
@@ -102,8 +102,6 @@ margin-top: calc(var(--video-height)/2 - var(--central-icon-size)/2);
 {
   display: flex;
   width: 180px;
-  font-size: 19px;
-  justify-content: space-around;
   margin-left: auto;
 }
 
@@ -111,4 +109,11 @@ margin-top: calc(var(--video-height)/2 - var(--central-icon-size)/2);
   width: 48px;
   height: 48px;
   cursor: pointer;
+  box-sizing: border-box;
+}
+
+.fullscreen{
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
